[package]
name = "isahc-benchmarks"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
criterion = "0.3"
curl = { features = [
    "static-curl",
    "cares",
], git = "https://github.com/getsentry/curl-rust", rev = "47a97a58c3e7de6dbe229a9dd284f7804bdd82ec" }
rayon = "1"
rouille = "3"

[dependencies.isahc]
path = ".."

[[bench]]
name = "download"
harness = false
