[package]
name = "isahc-benchmarks"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
criterion = "0.3"
curl = { features = [
    "static-curl",
    "cares",
], git = "https://github.com/getsentry/curl-rust", rev = "7b63d9d780bb9bd577abcbca37911adfd93ca7e9" }
rayon = "1"
rouille = "3"

[dependencies.isahc]
path = ".."

[[bench]]
name = "download"
harness = false
