[package]
name = "isahc-benchmarks"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
criterion = "0.3"
curl = { features = [
    "static-curl",
    "cares",
], git = "https://github.com/getsentry/curl-rust", rev = "213aa433e3cdb14f369f7e7007206ecc3334b210" }
rayon = "1"
rouille = "3"

[dependencies.isahc]
path = ".."

[[bench]]
name = "download"
harness = false
